indexの目次やcssの作成ramenファイルの大まかな枠組みの作成

--- a/css/ramen.css
+++ b/css/ramen.css
@@ -10,7 +10,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    background: linear-gradient(180deg, #ff7e00, #182848);
+    background-color: #d4c730;
     padding-top: 20px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
