--- a/css/ramen.css
+++ b/css/ramen.css
@@ -4,13 +4,32 @@ body {
     background-color: #f4f4f9;
 }
 
+.image-container {
+    position: relative; 
+    width: 85%; 
+    height: 520px; 
+    margin: 20px auto;
+    overflow: hidden; 
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%; 
+    object-fit: cover; 
+    display: block;
+    position: absolute; 
+    top: 0;
+    right: 0; 
+}
+
+
 .sidenav {
     height: 100%;
     width: 220px;
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #d4c730;
+    background-color: #f1f1f1; 
     padding-top: 20px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
@@ -19,19 +38,20 @@ body {
     padding: 15px 20px;
     text-decoration: none;
     font-size: 18px;
-    color: #f1f1f1;
+    color: #333; 
     display: block;
     transition: background 0.3s, padding-left 0.3s;
 }
 
 .sidenav a:hover {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(0, 0, 0, 0.2);
     padding-left: 30px;
 }
 
+
 .main-content {
     margin-left: 240px;
-    padding: 20px;
+    padding: 10px;
 }
 
 .main-content h2 {
