--- a/css/pasta.css
+++ b/css/pasta.css
@@ -22,3 +22,23 @@
     background: rgba(0, 0, 0, 0.2);
     padding-left: 30px;
 }
+
+.title{
+    margin-left: 240px;
+    padding: 10px;
+}
+
+.p{
+    margin-left: 240px;
+    padding: 10px;
+}
+
+.ex{
+    margin-left: 240px;
+    padding: 10px;
+}
+
+.ranking{
+    margin-left: 240px;
+    padding: 10px;
+}
