--- a/css/soba.css
+++ b/css/soba.css
@@ -22,3 +22,13 @@
     background: rgba(0, 0, 0, 0.2);
     padding-left: 30px;
 }
+
+.title{
+    margin-left: 240px;
+    padding: 10px;
+}
+
+.mokuji{ 
+    margin-left: 240px;
+    padding: 10px;
+}
