ランキングとハイパーリンクの作成

--- a/css/pasta.css
+++ b/css/pasta.css
@@ -33,6 +33,11 @@
     padding: 10px;
 }
 
+.num{
+    margin-left: 265px;
+    padding: 10px;
+}
+
 .ex{
     margin-left: 240px;
     padding: 10px;
