--- a/css/ramen.css
+++ b/css/ramen.css
@@ -1,27 +1,8 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
-    background-color: #f4f4f9;
+    background-color: #F4F4F9;
 }
-
-.image-container {
-    position: relative; 
-    width: 85%; 
-    height: 520px; 
-    margin: 20px auto;
-    overflow: hidden; 
-}
-
-.image-container img {
-    width: 100%;
-    height: 100%; 
-    object-fit: cover; 
-    display: block;
-    position: absolute; 
-    top: 0;
-    right: 0; 
-}
-
 
 .sidenav {
     height: 100%;
@@ -29,7 +10,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #f1f1f1; 
+    background-color: #F1F1F1;
     padding-top: 20px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
@@ -38,7 +19,7 @@ body {
     padding: 15px 20px;
     text-decoration: none;
     font-size: 18px;
-    color: #333; 
+    color: #333;
     display: block;
     transition: background 0.3s, padding-left 0.3s;
 }
@@ -48,6 +29,15 @@ body {
     padding-left: 30px;
 }
 
+.about{
+    margin-left: 240px;
+    padding: 10px;
+}
+
+.index{
+    margin-left: 240px;
+    padding: 10px;
+}
 
 .main-content {
     margin-left: 240px;
