ランキング内容、画像縮小、移動リンク、右ずらし

--- a/css/soba.css
+++ b/css/soba.css
@@ -32,3 +32,28 @@
     margin-left: 240px;
     padding: 10px;
 }
+
+.hyouka{
+    margin-left: 240px;
+    padding: 10px;
+}
+
+.rank1{
+    margin-left: 240px;
+    padding: 10px;
+}
+
+.rank2{
+    margin-left: 240px;
+    padding: 10px;
+}
+
+.rank3{
+    margin-left: 240px;
+    padding: 10px;
+}
+
+.kotu{
+    margin-left: 240px;
+    padding: 10px;
+}
