--- a/css/soba.css
+++ b/css/soba.css
@@ -57,3 +57,51 @@
     margin-left: 240px;
     padding: 10px;
 }
+
+/*== 開閉式もくじ ==*/
+.contents_box {
+    padding: 10px;
+    font-size:1rem;/*タイトルのフォントサイズ*/
+    color:#696969;/*タイトルの文字色*/
+    background-color:#fff;/*背景色*/
+    border:1px solid #696969;/*外枠線- 色*/
+}
+
+/*== 開閉文字装飾 ==*/
+.contents_box label {
+    padding: 5px;
+    color:#0000ff; /*文字色*/
+    font-size:1rem;/*フォントサイズ*/
+    cursor:pointer;
+    border-bottom: 1px dotted #0000ff;/*下線*/
+}
+
+/*開く*/
+.contents_box label:before{
+    display: inline-block;
+    content: "[ 開く ]";/*"表示"などに変更可*/}
+/*閉じる*/
+.contents_box input:checked ~ label:before {
+     content: "[ 閉じる ]";/*"非表示"などに変更可*/}
+
+.contents_box input{display:none;}
+/*最初は非表示*/
+.contents_box .hidden_show
+{height:0;padding:0;overflow:hidden;transition:0.8s;}
+/*クリックでopen*/
+.contents_box input:checked ~ .hidden_show
+{padding: 10px 0;height:auto;}
+
+.table-wrap {
+    overflow-x: scroll;
+  }
+  .table {
+    width: 100%;
+    border-collapse: collapse;
+    white-space: nowrap;
+  }
+  .table th,
+  .table td {
+    border: 2px solid #eee;
+    padding: 4px 8px;
+  }
